Implemented messages feature
