# nest/libs/features/messages/src/dtos/post-message.dto.ts
@@ -1,0 +1,11 @@
+import { IsNotEmpty, IsString } from 'class-validator';
+
+export class PostMessageDto {
+  @IsString()
+  @IsNotEmpty()
+  receiverId: string;
+
+  @IsString()
+  @IsNotEmpty()
+  text: string;
+}
