# nest/libs/features/messages/src/entities/message.entity.ts
@@ -1,0 +1,21 @@
+import { Schema, Prop, SchemaFactory } from '@nestjs/mongoose';
+
+@Schema({ timestamps: true })
+export class Message {
+  @Prop({ required: true })
+  sender: string;
+
+  @Prop({ required: true })
+  receiver: string;
+
+  @Prop({ required: true })
+  text: string;
+
+  createdAt?: Date;
+}
+
+export const MessageSchema = SchemaFactory.createForClass(Message);
+
+MessageSchema.index({ sender: 1 });
+
+MessageSchema.index({ receiver: 1 });
